--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,7 +7,7 @@
 
 $primary: #1e2233;
 $secondary: #24273d;
-$light: #f85a55;
+$main: #fc5c57;
 $fontLogo: 'Raleway', sans-serif;
 $fontMain: 'Arimo', sans-serif;
 
