--- a/styles/breakpoints/medium.css
+++ b/styles/breakpoints/medium.css
@@ -3,7 +3,7 @@
  * 28 |     background-color: $dark-strong;
  *    |                       ^^^^^^^^^^^^
  *    '
- *   styles/breakpoints/medium.scss 28:23  root stylesheet */
+ *   styles\breakpoints\medium.scss 28:23  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 28 \2502      background-color: $dark-strong;\a    \2502                        ^^^^^^^^^^^^\a    \2575 \a   styles/breakpoints/medium.scss 28:23  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 28 \2502      background-color: $dark-strong;\d\a    \2502                        ^^^^^^^^^^^^\a    \2575 \a   styles\\breakpoints\\medium.scss 28:23  root stylesheet";
 }
