--- a/styles/form.css
+++ b/styles/form.css
@@ -3,7 +3,7 @@
  * 30 |   font-family: $font;
  *    |                ^^^^^
  *    '
- *   styles/form.scss 30:16  root stylesheet */
+ *   styles\form.scss 30:16  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 30 \2502    font-family: $font;\a    \2502                 ^^^^^\a    \2575 \a   styles/form.scss 30:16  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 30 \2502    font-family: $font;\d\a    \2502                 ^^^^^\a    \2575 \a   styles\\form.scss 30:16  root stylesheet";
 }
