--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,4 +9,9 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  font-family: "Arimo", sans-serif;
+  background-color: #1e2233;
+}
+
 /*# sourceMappingURL=globals.css.map */
