--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,7 +13,8 @@ html {
 
 body {
   // font-size: 1.6rem;
-  // font-family: $font;
+  font-family: $fontMain;
+  background-color: $primary;
   // color: white;
   // background-color: $light;
 }
