--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,11 @@
 .header {
   height: 500px;
   padding: 25px;
-  background-color: #1e2233;
+  background-color: #1c1c1cdb;
+  position: relative;
 }
 .header__top {
+  height: 40px;
   display: flex;
   justify-content: space-between;
 }
@@ -26,14 +28,66 @@
 .header .nav__list {
   display: flex;
   align-items: center;
+  height: 100%;
+  list-style: none;
 }
-.header .nav__list a {
+.header .nav__list-item {
   margin-left: 20px;
-  color: white;
-  text-decoration: none;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
+}
+.header .nav__list-item a {
+  color: white;
+  text-decoration: none;
+  transition: 0.4s;
+}
+.header .nav__list-item a:hover {
+  font-size: 1.8rem;
+  color: #fc5c57;
+}
+.header .nav__list-item:last-child a {
+  border: 1px solid #fc5c57;
+  padding: 10px 15px;
+  color: #fc5c57;
+}
+.header .nav__list-item:last-child a:hover {
+  background-color: #fc5c57;
+  color: white;
+  font-size: 1.4rem;
+}
+.header__image--bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.header__hero {
+  color: white;
+  height: 410px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.header__hero img {
+  width: 125px;
+  height: 131px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+  margin-top: -55px;
+}
+.header__hero h1 {
+  font-size: 3rem;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.2rem;
+}
+.header__hero p {
+  font-size: 1.3rem;
+  letter-spacing: 0.4rem;
+  margin-top: 7px;
 }
 
 /*# sourceMappingURL=header.css.map */
