--- a/styles/header.scss
+++ b/styles/header.scss
@@ -3,8 +3,10 @@
 .header {
   height: 500px;
   padding: 25px;
-  background-color: $primary;
+  background-color: #1c1c1cdb;
+  position: relative;
   &__top {
+    height: 40px;
     display: flex;
     justify-content: space-between;
     &-title {
@@ -29,14 +31,73 @@
     &__list {
       display: flex;
       align-items: center;
-      a {
+      height: 100%;
+      list-style: none;
+      &-item {
         margin-left: 20px;
-        color: white;
-        text-decoration: none;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         font-family: $fontLogo;
         font-weight: 600;
+        a {
+          color: white;
+          text-decoration: none;
+          transition: 0.4s;
+        }
+        a:hover {
+          font-size: 1.8rem;
+          color: $main;
+        }
       }
+      &-item:last-child {
+        a {
+          border: 1px solid $main;
+          padding: 10px 15px;
+          color: $main;
+        }
+
+        a:hover {
+          background-color: $main;
+          color: white;
+          font-size: 1.4rem;
+        }
+      }
+    }
+  }
+
+  &__image--bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+
+  &__hero {
+    color: white;
+    height: 410px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 125px;
+      height: 131px;
+      border-radius: 50%;
+      margin-bottom: 15px;
+      margin-top: -55px;
+    }
+
+    h1 {
+      font-size: 3rem;
+      font-family: $fontLogo;
+      letter-spacing: 0.2rem;
+    }
+
+    p {
+      font-size: 1.3rem;
+      letter-spacing: 0.4rem;
+      margin-top: 7px;
     }
   }
 }
