--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,7 @@ body {
   // font-size: 1.6rem;
   font-family: $fontMain;
   background-color: $primary;
-  // color: white;
+  color: white;
   // background-color: $light;
 }
 
