--- a/styles/projects.css
+++ b/styles/projects.css
@@ -3,7 +3,7 @@
  * 98 |       color: $selection;
  *    |              ^^^^^^^^^^
  *    '
- *   styles\projects.scss 98:14  root stylesheet */
+ *   styles/projects.scss 98:14  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 98 \2502        color: $selection;\d\a    \2502               ^^^^^^^^^^\a    \2575 \a   styles\\projects.scss 98:14  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 98 \2502        color: $selection;\a    \2502               ^^^^^^^^^^\a    \2575 \a   styles/projects.scss 98:14  root stylesheet";
 }
