--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ html {
 body {
   font-family: "Arimo", sans-serif;
   background-color: #1e2233;
+  color: white;
 }
 
 /*# sourceMappingURL=globals.css.map */
