--- a/styles/module.css
+++ b/styles/module.css
@@ -12,6 +12,7 @@ html {
 body {
   font-family: "Arimo", sans-serif;
   background-color: #1e2233;
+  color: white;
 }
 
 .header {
@@ -81,7 +82,6 @@ body {
   z-index: -1;
 }
 .header__hero {
-  color: white;
   height: 410px;
   display: flex;
   flex-direction: column;
@@ -104,6 +104,63 @@ body {
   font-size: 1.3rem;
   letter-spacing: 0.4rem;
   margin-top: 7px;
+}
+
+.aboutme {
+  padding: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+.aboutme h2 {
+  font-size: 2.3rem;
+  font-weight: 600;
+}
+.aboutme h2:after {
+  display: block;
+  content: "____";
+  margin-top: -20px;
+  color: #fc5c57;
+}
+.aboutme__description {
+  width: 50%;
+}
+.aboutme__description p {
+  font-size: 1.4rem;
+  font-weight: 300;
+  margin: 10px 0 20px;
+  line-height: 2.5rem;
+}
+.aboutme__personal {
+  border: 1px solid #fc5c577a;
+}
+.aboutme__personal ul {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  height: 250px;
+  padding: 25px 35px;
+  align-items: center;
+  gap: 10px;
+}
+.aboutme__personal li {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.aboutme__personal span {
+  font-size: 1.1rem;
+  font-weight: 100;
+}
+.aboutme__objectives {
+  width: 40%;
+}
+.aboutme__objectives ul {
+  list-style: none;
+  margin-top: 12px;
+  font-size: 1.5rem;
+}
+.aboutme__objectives li {
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=module.css.map */
