--- a/styles/module.scss
+++ b/styles/module.scss
@@ -1,6 +1,6 @@
 @use 'globals.scss';
 @use 'header.scss';
-// @use 'hero.scss';
+@use 'aboutme.scss'; // @use 'hero.scss';
 // @use 'habilities.scss';
 // @use 'projects.scss';
 // @use 'form.scss';
