--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,9 +10,8 @@ html {
 }
 
 body {
-  font-family: "Arimo", sans-serif;
-  background-color: #1e2233;
-  color: white;
+  font-family: "Raleway", sans-serif;
+  background-color: #fbfbfb;
 }
 
 /*# sourceMappingURL=globals.css.map */
