--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,9 +14,7 @@ html {
 body {
   // font-size: 1.6rem;
   font-family: $fontMain;
-  background-color: $primary;
-  color: white;
-  // background-color: $light;
+  background-color: #fbfbfb;
 }
 
 h2 {
