--- a/styles/aboutme.scss
+++ b/styles/aboutme.scss
@@ -1,64 +1,62 @@
 @import './variables.scss';
 
 .aboutme {
-  padding: 60px;
+  padding: 70px 50px;
+  font-family: $fontLogo;
   display: flex;
-  justify-content: space-between;
   h2 {
-    font-size: 2.3rem;
-    font-weight: 600;
-  }
-  h2:after {
-    display: block;
-    content: '____';
-    margin-top: -20px;
-    color: $main;
+    border-left: 3px solid $main;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    font-size: 2.6rem;
+    padding-left: 10px;
+    letter-spacing: 1px;
+    color: $gray;
+    font-family: $fontLogo;
   }
   &__description {
-    width: 50%;
-    p {
-      font-size: 1.4rem;
-      font-weight: 300;
-      margin: 10px 0 20px;
-      line-height: 2.5rem;
-    }
+    padding-right: 150px;
   }
 
   &__personal {
-    border: 1px solid #fc5c577a;
+    margin-top: 15px;
     ul {
       list-style: none;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-      height: 250px;
-      padding: 25px 35px;
-      align-items: center;
-      gap: 10px;
+      padding-left: 5px;
     }
-
     li {
+      margin: 10px 0;
       font-size: 1.3rem;
-      font-weight: 600;
     }
 
-    span {
-      font-size: 1.1rem;
-      font-weight: 100;
+    a {
+      color: $main;
+      font-weight: 600;
+      // background-color: $main;
+      border: 2px solid $main;
+      padding: 13px 25px;
+      margin-top: 5px;
+      display: inline-block;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    a:hover {
+      background-color: $main;
+      color: white;
     }
   }
 
   &__objectives {
-    width: 40%;
-
     ul {
       list-style: none;
-      margin-top: 12px;
-      font-size: 1.5rem;
+      padding-left: 5px;
+      margin-top: 15px;
     }
-
     li {
-      margin-bottom: 20px;
+      margin: 10px 0;
+      font-size: 1.3rem;
     }
   }
 }
