--- a/styles/aboutme.scss
+++ b/styles/aboutme.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .aboutme {
-  padding: 70px 50px;
+  padding: 70px 50px 10px;
   font-family: $fontLogo;
   display: flex;
   h2 {
