--- a/styles/habilities.css
+++ b/styles/habilities.css
@@ -1,17 +1,46 @@
-/* Error: Undefined variable.
- *   ,
- * 5 |   color: $dark;
- *   |          ^^^^^
- *   '
- *   styles\habilities.scss 5:10  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 5 \2502    color: $dark;\d\a   \2502           ^^^^^\a   \2575 \a   styles\\habilities.scss 5:10  root stylesheet";
+.habilities {
+  padding: 40px 50px;
+  max-width: 1500px;
+  margin: 0 auto;
 }
+.habilities h2 {
+  text-align: center;
+  font-size: 2.6rem;
+  letter-spacing: 1px;
+  color: #34343480;
+}
+.habilities ul {
+  display: grid;
+  margin-top: 30px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 210px;
+  gap: 20px;
+  list-style: none;
+}
+.habilities li {
+  background-color: white;
+  padding: 30px 15px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
+  box-shadow: 1px 3px 5px 1px #0000000d;
+  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
+}
+.habilities i {
+  font-size: 2rem;
+  background-color: #3434342b;
+  border-radius: 50%;
+  padding: 15px 13px;
+}
+.habilities h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 7px 0 8px;
+}
+.habilities p {
+  font-size: 1.3rem;
+}
+
+/*# sourceMappingURL=habilities.css.map */
