--- a/styles/module.scss
+++ b/styles/module.scss
@@ -1,7 +1,7 @@
 @use 'globals.scss';
 @use 'header.scss';
-@use 'aboutme.scss'; // @use 'hero.scss';
-// @use 'habilities.scss';
+@use 'aboutme.scss';
+@use 'habilities.scss';
 // @use 'projects.scss';
 // @use 'form.scss';
 // @use 'footer.scss';
