--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -31,6 +31,7 @@
 .aboutme__personal a {
   color: #fc5c57;
   font-weight: 600;
+  font-size: 1.3rem;
   border: 2px solid #fc5c57;
   padding: 13px 25px;
   margin-top: 5px;
