--- a/styles/module.scss
+++ b/styles/module.scss
@@ -2,6 +2,6 @@
 @use 'header.scss';
 @use 'aboutme.scss';
 @use 'habilities.scss';
-// @use 'projects.scss';
+@use 'projects.scss';
 // @use 'form.scss';
 // @use 'footer.scss';
