--- a/styles/module.css
+++ b/styles/module.css
@@ -129,6 +129,7 @@ body {
 .aboutme__personal a {
   color: #fc5c57;
   font-weight: 600;
+  font-size: 1.3rem;
   border: 2px solid #fc5c57;
   padding: 13px 25px;
   margin-top: 5px;
@@ -194,5 +195,184 @@ body {
 .habilities p {
   font-size: 1.3rem;
 }
+
+.projects {
+  padding: 40px 50px;
+}
+.projects h2 {
+  text-align: center;
+  font-size: 2.6rem;
+  letter-spacing: 1px;
+  color: #34343480;
+}
+.projects__item {
+  margin: 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.projects__item-description {
+  background-color: white;
+  height: 235px;
+  width: 455px;
+  padding: 30px 20px;
+  margin-right: -160px;
+  overflow: hidden;
+  position: relative;
+  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
+  box-shadow: 1px 3px 5px 1px #0000000d;
+  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
+}
+.projects__item-description-initial {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  transition: 1s;
+}
+.projects__item-description-initial i {
+  position: absolute;
+  font-size: 2.5rem;
+  color: #34343480;
+}
+.projects__item-description-secondary {
+  position: absolute;
+  top: 0;
+  left: 455px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.404);
+  padding: 30px 20px;
+  font-size: 1.3rem;
+  transition: 0.3s;
+}
+.projects__item-description-secondary i {
+  position: absolute;
+  font-size: 2.5rem;
+  color: #34343480;
+  right: 15px;
+}
+.projects__item-description-secondary h4 {
+  font-size: 1.4rem;
+  margin: 10px 0 5px;
+}
+.projects__item-description-secondary ul {
+  padding-left: 25px;
+}
+.projects__item-description-buttons {
+  margin: 10px auto 0;
+}
+.projects__item-description-buttons a {
+  color: #fc5c57;
+  font-weight: 600;
+  font-size: 1.3rem;
+  border: 2px solid #fc5c57;
+  padding: 13px 25px;
+  margin-top: 5px;
+  display: inline-block;
+  text-decoration: none;
+  transition: 0.3s;
+}
+.projects__item-description-buttons a:hover {
+  background-color: #fc5c57;
+  color: white;
+}
+.projects__item h3 {
+  font-size: 3rem;
+  text-align: center;
+  font-weight: 300;
+}
+.projects__item-visuals {
+  position: relative;
+  z-index: -1;
+  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
+  box-shadow: 1px 3px 5px 1px #0000000d;
+  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
+}
+.projects img {
+  width: 470px;
+  height: 270px;
+  object-fit: cover;
+}
+.projects .image-cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.733);
+}
+
+.move-initial {
+  right: 455px;
+}
+
+.move-secondary {
+  left: 0;
+}
+
+/* .projects {
+  padding: 25px;
+  &__item {
+    background-color: $dark-strong;
+    padding: 25px 30px;
+    display: flex;
+    justify-content: space-between;
+    @include darkShadow();
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__item-visuals {
+    width: 50%;
+    height: 100%;
+    position: relative;
+    display: flex;
+  }
+
+  &__item-description {
+    width: 50%;
+    text-align: justify;
+    padding-left: 30px;
+    line-height: 2.5rem;
+  }
+
+  &__item-description-buttons {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    a {
+      border: 1px solid rgba(255, 255, 255, 0.411);
+      font-weight: 300;
+      padding: 10px 20px;
+      color: white;
+      text-decoration: none;
+      margin: 0 5px;
+      transition: 0.2s;
+    }
+
+    a:hover {
+      border: 1px solid transparent;
+      background-color: #fb7c3c40;
+      color: $selection;
+    }
+  }
+
+  h3 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: #00000099;
+    font-size: 4rem;
+    font-weight: 300;
+  }
+} */
 
 /*# sourceMappingURL=module.css.map */
