--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -1,114 +1,119 @@
 @import './variables.scss';
 
 .projects {
-  padding: 25px;
-  &__item-visuals {
-    width: 100%;
-    height: 180px;
-    position: relative;
+  padding: 40px 50px;
+
+  h2 {
+    text-align: center;
+    font-size: 2.6rem;
+    letter-spacing: 1px;
+    color: $gray;
+  }
+
+  &__item {
+    margin: 40px 0;
     display: flex;
-    max-width: 420px;
-    margin: 0 auto;
-    h3 {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: #00000075;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: 400;
-      font-size: 3.5rem;
-      transition: 0.4s;
+    align-items: center;
+    justify-content: center;
+
+    &-description {
+      background-color: white;
+      height: 235px;
+      width: 455px;
+      padding: 30px 20px;
+      margin-right: -160px;
+      overflow: hidden;
+      position: relative;
+      @include lightShadow();
     }
 
-    img {
-      width: 100%;
-      object-fit: cover;
-    }
-
-    &-tools {
-      position: absolute;
-      width: 100%;
+    &-description-initial {
       height: 100%;
-      background-color: #000000b6;
-      opacity: 0;
-      transition: 0.4s;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      h4 {
-        text-align: center;
-        padding-bottom: 8px;
-        font-size: 1.7rem;
-      }
-      ul {
-        font-size: 1.4rem;
-        width: 90%;
-        margin: 0 auto;
-      }
-
-      li {
-        padding-bottom: 5px;
+      position: relative;
+      transition: 1s;
+      i {
+        position: absolute;
+        font-size: 2.5rem;
+        color: $gray;
       }
     }
 
-    ul {
-      list-style: none;
-    }
-  }
-
-  &__item-description {
-    max-width: 420px;
-    margin: 0 auto;
-    line-height: 2.3rem;
-    margin-top: 5px;
-  }
-
-  &__item-visuals:hover {
-    h3 {
-      opacity: 0;
-    }
-  }
-  .projects__item-visuals:hover .projects__item-visuals-tools {
-    opacity: 1;
-  }
-}
-
-.projects {
-  &__item-description-buttons {
-    margin: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    a {
-      border: 1px solid rgba(255, 255, 255, 0.411);
-      font-weight: 300;
-      padding: 10px 20px;
-      color: white;
-      text-decoration: none;
-      text-align: center;
-      transition: 0.2s;
+    &-description-secondary {
+      position: absolute;
+      top: 0;
+      left: 455px;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background-color: rgba(255, 255, 255, 0.404);
+      padding: 30px 20px;
       font-size: 1.3rem;
-      width: 48%;
+      transition: 0.3s;
+      i {
+        position: absolute;
+        font-size: 2.5rem;
+        color: $gray;
+        right: 15px;
+      }
+      h4 {
+        font-size: 1.4rem;
+        margin: 10px 0 5px;
+      }
+
+      ul {
+        padding-left: 25px;
+      }
     }
 
-    a:hover {
-      border: 1px solid transparent;
-      background-color: #fb7c3c40;
-      color: $selection;
+    &-description-buttons {
+      margin: 10px auto 0;
+      a {
+        @include redButton();
+      }
+
+      a:hover {
+        @include redButtonHover();
+      }
     }
+
+    h3 {
+      font-size: 3rem;
+      text-align: center;
+      font-weight: 300;
+    }
+
+    &-visuals {
+      position: relative;
+      z-index: -1;
+      @include lightShadow();
+    }
+  }
+
+  img {
+    width: 470px;
+    height: 270px;
+    object-fit: cover;
+  }
+
+  .image-cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.733);
   }
 }
 
-.visit__GH {
-  text-align: center;
-  margin-top: 15px;
+.move-initial {
+  right: 455px;
 }
 
-.visit__GH a {
-  color: $selection;
-  text-decoration: none;
-  font-size: 1.8rem;
+.move-secondary {
+  left: 0;
 }
 
 /* .projects {
