--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -23,3 +23,20 @@ $gray: #34343480;
   box-shadow: 1px 3px 5px 1px #0000000d;
   -moz-box-shadow: 1px 3px 5px 1px #0000000d;
 }
+
+@mixin redButton() {
+  color: $main;
+  font-weight: 600;
+  font-size: 1.3rem;
+  border: 2px solid $main;
+  padding: 13px 25px;
+  margin-top: 5px;
+  display: inline-block;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+@mixin redButtonHover() {
+  background-color: $main;
+  color: white;
+}
