--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -4,325 +4,128 @@
   padding: 40px 50px;
 
   h2 {
-    text-align: center;
-    font-size: 2.6rem;
-    letter-spacing: 1px;
-    color: $gray;
+    @include titles();
   }
 
   &__item {
-    margin: 40px 0;
     display: flex;
     align-items: center;
-    justify-content: center;
-
+    justify-content: end;
+    position: relative;
+    padding-right: 60px;
+    margin: 40px 0 80px;
     &-description {
-      background-color: white;
-      height: 235px;
-      width: 455px;
-      padding: 30px 20px;
-      margin-right: -160px;
-      overflow: hidden;
-      position: relative;
-      @include lightShadow();
-    }
-
-    &-description-initial {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      position: relative;
-      transition: 1s;
-      i {
-        position: absolute;
-        font-size: 2.5rem;
-        color: $gray;
-      }
-    }
-
-    &-description-secondary {
+      width: 500px;
+      height: 270px;
+      left: 70px;
       position: absolute;
-      top: 0;
-      left: 455px;
-      height: 100%;
-      width: 100%;
+    }
+
+    &-description-container {
+      background-color: white;
+      overflow: hidden;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      background-color: rgba(255, 255, 255, 0.404);
-      padding: 30px 20px;
-      font-size: 1.3rem;
-      transition: 0.3s;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      @include darkShadow();
       i {
         position: absolute;
-        font-size: 2.5rem;
-        color: $gray;
-        right: 15px;
+        font-size: 2.2rem;
       }
-      h4 {
-        font-size: 1.4rem;
-        margin: 10px 0 5px;
-      }
-
-      ul {
-        padding-left: 25px;
-      }
-    }
-
-    &-description-buttons {
-      margin: 10px auto 0;
-      a {
-        @include redButton();
-      }
-
-      a:hover {
-        @include redButtonHover();
-      }
-    }
-
-    h3 {
-      font-size: 3rem;
-      text-align: center;
-      font-weight: 300;
     }
 
     &-visuals {
       position: relative;
       z-index: -1;
-      @include lightShadow();
+      width: 545px;
+      height: 320px;
+      @include darkShadow();
+
+      div {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.384);
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
+}
 
-  img {
-    width: 470px;
-    height: 270px;
-    object-fit: cover;
+.description-initial {
+  width: 100%;
+  height: 100%;
+  right: 0;
+  flex-shrink: 0;
+  position: absolute;
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  h3 {
+    font-size: 3rem;
+    font-weight: 300;
   }
 
-  .image-cover {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.733);
+  a {
+    @include redButton();
+  }
+
+  a:hover {
+    @include redButtonHover();
+  }
+
+  i {
+    left: 25px;
+  }
+}
+
+.description-secondary {
+  width: 100%;
+  height: 100%;
+  left: 500px;
+  flex-shrink: 0;
+  position: absolute;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1.3rem;
+  padding: 30px 50px;
+  p {
+    padding-bottom: 10px;
+    text-align: justify;
+  }
+
+  h4 {
+    font-size: 1.5rem;
+  }
+
+  ul {
+    padding-left: 20px;
+  }
+
+  li {
+    margin: 2px 0;
+  }
+
+  i {
+    right: 25px;
   }
 }
 
 .move-initial {
-  right: 455px;
+  right: 500px;
 }
 
 .move-secondary {
   left: 0;
 }
-
-/* .projects {
-  padding: 25px;
-  &__item {
-    background-color: $dark-strong;
-    padding: 25px 30px;
-    display: flex;
-    justify-content: space-between;
-    @include darkShadow();
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  &__item-visuals {
-    width: 50%;
-    height: 100%;
-    position: relative;
-    display: flex;
-  }
-
-  &__item-description {
-    width: 50%;
-    text-align: justify;
-    padding-left: 30px;
-    line-height: 2.5rem;
-  }
-
-  &__item-description-buttons {
-    margin: 20px 0;
-    display: flex;
-    justify-content: center;
-    a {
-      border: 1px solid rgba(255, 255, 255, 0.411);
-      font-weight: 300;
-      padding: 10px 20px;
-      color: white;
-      text-decoration: none;
-      margin: 0 5px;
-      transition: 0.2s;
-    }
-
-    a:hover {
-      border: 1px solid transparent;
-      background-color: #fb7c3c40;
-      color: $selection;
-    }
-  }
-
-  h3 {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    background-color: #00000099;
-    font-size: 4rem;
-    font-weight: 300;
-  }
-} */
-
-// .projects {
-//   padding: 25px;
-
-//   .projects__title {
-//     text-align: center;
-//   }
-
-//   .projects__container {
-//     display: flex;
-//     overflow-x: scroll;
-//     margin-bottom: 15px;
-//   }
-
-//   ::-webkit-scrollbar {
-//     background-color: transparent;
-//     height: 6px;
-//   }
-
-//   ::-webkit-scrollbar-track {
-//     background-color: #343a4024;
-//   }
-
-//   ::-webkit-scrollbar-thumb {
-//     background-color: $dark;
-//     border-radius: 5px;
-//   }
-// }
-
-// .project__item-container {
-//   position: relative;
-//   width: 100%;
-//   height: 300px;
-//   max-width: 400px;
-//   flex-direction: column;
-//   display: flex;
-//   flex-shrink: 0;
-//   margin: 0 20px 5px 0;
-//   overflow: hidden;
-// }
-
-// .project__item-container:last-child {
-//   margin-right: 0;
-// }
-
-// .project__item-container:hover .project__description {
-//   background-color: #000000c4;
-// }
-
-// .project__item-container:hover .project__description-wrapper {
-//   top: 0;
-// }
-
-// .project__item-container:hover .project__title-container {
-//   bottom: -300px;
-// }
-
-// .project__image {
-//   width: 100%;
-//   height: 100%;
-//   padding: 5px;
-//   filter: blur(5px);
-// }
-
-// .project__description {
-//   background-color: #222222f7;
-//   transition: 0.6s;
-//   width: 100%;
-//   height: 100%;
-//   position: absolute;
-
-//   p {
-//     font-size: 1.5rem;
-//   }
-// }
-
-// .project__title-container {
-//   height: 100%;
-//   width: 100%;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   position: absolute;
-//   bottom: 0;
-//   transition: 0.6s;
-// }
-
-// .project__title-container h2 {
-//   color: white;
-//   font-size: 3.5rem;
-//   font-weight: 300;
-// }
-
-// .project__description-wrapper {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   position: absolute;
-//   color: white;
-//   height: 100%;
-//   top: -300px;
-//   padding: 10px;
-//   transition: 0.6s;
-// }
-// .project__description-buttons {
-//   width: 100%;
-//   display: flex;
-//   justify-content: space-between;
-// }
-
-// .project__description p {
-//   margin: 10px;
-//   text-align: center;
-// }
-
-// .project__description h4 {
-//   text-align: center;
-//   font-size: 2.2rem;
-// }
-
-// .project__description a {
-//   margin: 5px 0px;
-//   display: block;
-//   width: 48%;
-//   border: 2px solid white;
-//   border-radius: 8px;
-//   color: white;
-//   text-align: center;
-//   padding: 10px 0px;
-//   text-decoration: none;
-//   font-weight: 600;
-// }
-
-// .project__description a:hover {
-//   background-color: $selection;
-//   transition: 0.3s;
-//   color: white;
-// }
-
-// .visit__GH {
-//   text-align: center;
-// }
-
-// .visit__GH a {
-//   color: $selection;
-//   text-decoration: none;
-//   font-size: 1.8rem;
-// }
