--- a/styles/module.css
+++ b/styles/module.css
@@ -208,16 +208,15 @@ body {
 .projects__item {
   display: flex;
   align-items: center;
-  justify-content: end;
   position: relative;
+  justify-content: center;
   padding-right: 60px;
   margin: 40px 0 80px;
 }
 .projects__item-description {
   width: 500px;
   height: 270px;
-  left: 70px;
-  position: absolute;
+  margin-right: -250px;
 }
 .projects__item-description-container {
   background-color: white;
