Style contact finish

--- a/styles/module.css
+++ b/styles/module.css
@@ -210,7 +210,7 @@ body {
   align-items: center;
   position: relative;
   justify-content: center;
-  padding-right: 60px;
+  padding-right: 25px;
   margin: 40px 0 80px;
 }
 .projects__item-description {
@@ -232,6 +232,7 @@ body {
 .projects__item-description-container i {
   position: absolute;
   font-size: 2.2rem;
+  cursor: pointer;
 }
 .projects__item-visuals {
   position: relative;
@@ -325,6 +326,89 @@ body {
 
 .move-secondary {
   left: 0;
+}
+
+.contact {
+  background-color: #000000e0;
+  color: white;
+  padding: 40px 50px;
+}
+.contact h2 {
+  text-align: center;
+  font-size: 2.6rem;
+  letter-spacing: 1px;
+  color: #34343480;
+  color: white;
+}
+.contact form {
+  max-width: 1200px;
+  margin: 40px auto 20px;
+}
+.contact label p {
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  letter-spacing: 0.3rem;
+}
+.contact label input,
+.contact label textarea {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid white;
+  width: 100%;
+  color: #ffffffd6;
+  margin: 3px 0 30px;
+  height: 30px;
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  transition: 0.3s;
+}
+.contact label textarea {
+  margin-top: 10px;
+  height: 70px;
+  resize: none;
+  font-family: "Raleway", sans-serif;
+}
+.contact label input:focus,
+.contact label textarea:focus {
+  border-bottom: 1px solid #fc5c57;
+}
+.contact button {
+  color: white;
+  background-color: #fc5c57;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 1.7rem;
+  border: 2px solid #fc5c57;
+  padding: 13px 25px;
+  margin-top: 5px;
+  display: inline-block;
+  text-decoration: none;
+  transition: 0.2s;
+  width: 280px;
+  cursor: pointer;
+}
+.contact button:hover {
+  -webkit-box-shadow: 0px 1px 5px 1px #fc5c57;
+  box-shadow: 0px 1px 5px 1px #fc5c57;
+  -moz-box-shadow: 0px 1px 3px 1px #fc5c57;
+}
+.contact ul {
+  list-style: none;
+  display: flex;
+  margin-top: 20px;
+}
+.contact li {
+  margin-right: 15px;
+  width: 32px;
+}
+.contact li i {
+  font-size: 3rem;
+  transition: 0.4s;
+}
+.contact li:hover i {
+  font-size: 3.8rem;
+  color: #fc5c57;
 }
 
 /*# sourceMappingURL=module.css.map */
