--- a/styles/module.scss
+++ b/styles/module.scss
@@ -3,5 +3,5 @@
 @use 'aboutme.scss';
 @use 'habilities.scss';
 @use 'projects.scss';
-// @use 'form.scss';
+@use 'contact.scss';
 // @use 'footer.scss';
