--- a/styles/projects.css
+++ b/styles/projects.css
@@ -12,7 +12,7 @@
   align-items: center;
   position: relative;
   justify-content: center;
-  padding-right: 60px;
+  padding-right: 25px;
   margin: 40px 0 80px;
 }
 .projects__item-description {
@@ -34,6 +34,7 @@
 .projects__item-description-container i {
   position: absolute;
   font-size: 2.2rem;
+  cursor: pointer;
 }
 .projects__item-visuals {
   position: relative;
