--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -12,7 +12,7 @@
     align-items: center;
     position: relative;
     justify-content: center;
-    padding-right: 60px;
+    padding-right: 25px;
     margin: 40px 0 80px;
     &-description {
       width: 500px;
@@ -31,6 +31,7 @@
       i {
         position: absolute;
         font-size: 2.2rem;
+        cursor: pointer;
       }
     }
 
