--- a/styles/aboutme.scss
+++ b/styles/aboutme.scss
@@ -16,7 +16,9 @@
     font-family: $fontLogo;
   }
   &__description {
-    padding-right: 150px;
+    padding-right: 50px;
+    line-height: 1.7rem;
+    width: 50%;
   }
 
   &__personal {
@@ -27,7 +29,7 @@
     }
     li {
       margin: 10px 0;
-      font-size: 1.3rem;
+      font-size: 1.5rem;
     }
 
     a {
@@ -40,6 +42,7 @@
   }
 
   &__objectives {
+    width: 50%;
     ul {
       list-style: none;
       padding-left: 5px;
@@ -47,7 +50,7 @@
     }
     li {
       margin: 10px 0;
-      font-size: 1.3rem;
+      font-size: 1.5rem;
     }
   }
 }
