--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: "Raleway", sans-serif;
-  background-color: #fbfbfb;
+  background-color: #f7f7f7;
 }
 
 /*# sourceMappingURL=globals.css.map */
