--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,7 +14,7 @@ html {
 body {
   // font-size: 1.6rem;
   font-family: $fontMain;
-  background-color: #fbfbfb;
+  background-color: #f7f7f7;
 }
 
 h2 {
