--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -7,13 +7,19 @@
     @include titles();
   }
 
+  &__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 50px;
+  }
+
   &__item {
     display: flex;
     align-items: center;
     position: relative;
     justify-content: center;
-    padding-right: 25px;
-    margin: 40px 0 80px;
+    /* padding-right: 25px; */
+    /* margin: 40px 0 80px; */
     &-description {
       width: 500px;
       height: 270px;
