--- a/styles/habilities.scss
+++ b/styles/habilities.scss
@@ -19,32 +19,41 @@
 
   li {
     background-color: white;
-    padding: 30px 15px;
+    padding: 15px;
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     @include lightShadow();
-  }
 
-  i {
-    font-size: 2rem;
-    background-color: #3434342b;
-    border-radius: 50%;
-    padding: 15px 13px;
+    div {
+      font-size: 2rem;
+      background-color: #3434342b;
+      border-radius: 50%;
+      // padding: 15px 13px;
+      width: 68px;
+      height: 67px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   h3 {
     font-size: 1.5rem;
     font-weight: 700;
-    margin: 7px 0 8px;
+    margin: 8px 0 10px;
   }
 
   p {
     font-size: 1.3rem;
+    line-height: 2rem;
   }
 }
 
+.icon-big {
+  font-size: 3rem;
+}
 // .habilities {
 //   padding: 25px;
 //   color: $dark;
