Add content to Aboutme

--- a/styles/module.css
+++ b/styles/module.css
@@ -289,6 +289,7 @@ body {
 .description-initial h3 {
   font-size: 3rem;
   font-weight: 300;
+  margin-bottom: 7px;
 }
 .description-initial a {
   color: #fc5c57;
