--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,9 +10,13 @@
   color: #34343480;
   color: white;
 }
+.contact h3 {
+  margin: 15px 25px 0;
+  font-size: 1.5rem;
+}
 .contact form {
   max-width: 1200px;
-  margin: 40px auto 20px;
+  margin: 25px auto 20px;
 }
 .contact label p {
   text-transform: uppercase;
