--- a/styles/module.css
+++ b/styles/module.css
@@ -95,6 +95,12 @@ body {
   letter-spacing: 0.4rem;
   margin-top: 7px;
 }
+.header__activator {
+  display: none;
+}
+.header__closer {
+  display: none;
+}
 
 .aboutme {
   padding: 70px 50px 10px;
