--- a/styles/module.css
+++ b/styles/module.css
@@ -14,6 +14,10 @@ body {
   background-color: #f7f7f7;
 }
 
+.responsive-title {
+  display: none;
+}
+
 .header {
   height: 500px;
   padding: 25px;
@@ -94,9 +98,12 @@ body {
   font-size: 1.3rem;
   letter-spacing: 0.4rem;
   margin-top: 7px;
+  text-align: center;
 }
 .header__activator {
   display: none;
+  transition: 0.3s;
+  opacity: 0;
 }
 .header__closer {
   display: none;
