--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -1,21 +1,90 @@
+.responsive-title {
+  display: flex;
+  background-color: #000000e0;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.responsive-title img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+.responsive-title a {
+  color: white;
+  font-size: 2.5rem;
+  font-family: "Raleway", sans-serif;
+  text-decoration: none;
+  letter-spacing: 0.7rem;
+}
+
 .header {
   transition: 0.5s;
   position: fixed;
   width: 100%;
-  top: 0;
+  top: -100vh;
   height: 100vh;
-  background-color: white;
   display: grid;
+  grid-template-rows: 210px 1fr 65px;
+  padding: 0;
+  background-color: #f7f7f7;
 }
 .header__top {
-  border: 1px solid white;
+  height: auto;
+}
+.header__top .nav__list {
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: initial;
+  padding-left: 30px;
+}
+.header__top .nav__list-item {
+  font-size: 1.6rem;
+  margin: 0;
+}
+.header__top .nav__list-item a {
+  color: black;
+}
+.header__top-title {
+  display: none;
 }
 .header__hero {
+  padding-left: 30px;
+  height: auto;
   grid-row: 1/span 1;
-  border: 1px solid white;
-  height: 215px;
+  height: auto;
+  display: grid;
+  grid-template-columns: 80px 1fr;
+  grid-template-rows: 1fr;
+  background-color: #1c1c1cdb;
 }
-.header__activator {
+.header__hero-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.header__hero-img img {
+  width: 85px;
+  height: 90px;
+  margin: 0;
+}
+.header__hero-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  padding-left: 25px;
+}
+.header__hero-description h1 {
+  font-size: 2.3rem;
+}
+.header__hero-description p {
+  text-align: left;
+  font-size: 1.3rem;
+}
+.header__activators {
   background-color: #fc5c57ab;
   width: 70px;
   height: 70px;
@@ -28,15 +97,37 @@
   align-items: center;
   justify-content: center;
   border-radius: 100%;
-  z-index: -1;
+  opacity: 1;
 }
 .header .nav__list a a:hover {
   color: white;
   border-bottom: 1px solid white;
 }
+.header__closer {
+  display: flex;
+  color: black;
+  justify-content: center;
+}
+.header__closer div {
+  border: 2px solid #fc5c57;
+  color: #fc5c57;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  font-size: 2.2rem;
+}
 
 .activate__header {
   top: 0;
+}
+
+.header__image--bg {
+  position: absolute;
+  height: 210px;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=tablet.css.map */
