--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -1,25 +1,97 @@
 @import '../variables.scss';
 
+.responsive-title {
+  display: flex;
+  background-color: #000000e0;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+  }
+  a {
+    color: white;
+    font-size: 2.5rem;
+    font-family: $fontLogo;
+    text-decoration: none;
+    letter-spacing: 0.7rem;
+  }
+}
+
 .header {
   transition: 0.5s;
   position: fixed;
   width: 100%;
-  top: 0;
+  top: -100vh;
   height: 100vh;
-  background-color: white;
   display: grid;
+  grid-template-rows: 210px 1fr 65px;
+  padding: 0;
+  background-color: #f7f7f7;
 
   &__top {
-    border: 1px solid white;
+    height: auto;
+    .nav__list {
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: initial;
+      padding-left: 30px;
+      &-item {
+        font-size: 1.6rem;
+        margin: 0;
+        a {
+          color: black;
+        }
+      }
+    }
+    &-title {
+      display: none;
+    }
   }
 
   &__hero {
+    padding-left: 30px;
+    height: auto;
     grid-row: 1 / span 1;
-    border: 1px solid white;
-    height: 215px;
+    height: auto;
+    display: grid;
+    grid-template-columns: 80px 1fr;
+    grid-template-rows: 1fr;
+    background-color: #1c1c1cdb;
+
+    &-img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      img {
+        width: 85px;
+        height: 90px;
+        margin: 0;
+      }
+    }
+
+    &-description {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
+      padding-left: 25px;
+      h1 {
+        font-size: 2.3rem;
+      }
+
+      p {
+        text-align: left;
+        font-size: 1.3rem;
+      }
+    }
   }
 
-  &__activator {
+  &__activators {
     background-color: #fc5c57ab;
     width: 70px;
     height: 70px;
@@ -32,7 +104,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 100%;
-    z-index: -1;
+    opacity: 1;
   }
 
   .nav__list {
@@ -41,8 +113,32 @@
       border-bottom: 1px solid white;
     }
   }
+
+  &__closer {
+    display: flex;
+    color: black;
+    justify-content: center;
+
+    div {
+      border: 2px solid $main;
+      color: $main;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 100px;
+      font-size: 2.2rem;
+    }
+  }
 }
 
 .activate__header {
   top: 0;
+}
+
+.header__image--bg {
+  position: absolute;
+  height: 210px;
+  object-fit: cover;
 }
