--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,6 +17,10 @@ body {
   background-color: #f7f7f7;
 }
 
+.responsive-title {
+  display: none;
+}
+
 h2 {
   // text-align: center;
   // font-size: 3.5rem;
