--- a/styles/header.scss
+++ b/styles/header.scss
@@ -85,11 +85,14 @@
       font-size: 1.3rem;
       letter-spacing: 0.4rem;
       margin-top: 7px;
+      text-align: center;
     }
   }
 
   &__activator {
     display: none;
+    transition: 0.3s;
+    opacity: 0;
   }
 
   &__closer {
