--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -157,7 +157,6 @@
         font-size: 1.3rem;
       }
       a {
-        margin: 10px auto 0;
         display: block;
         width: 150px;
         text-align: center;
@@ -176,5 +175,16 @@
         font-size: 1.3rem;
       }
     }
+  }
+}
+
+/*_______________Habilities________________*/
+.habilities {
+  padding: 30px 15px 0;
+  h2 {
+    font-size: 2.2rem;
+  }
+  ul {
+    grid-template-columns: 1fr;
   }
 }
