--- a/styles/habilities.scss
+++ b/styles/habilities.scss
@@ -12,14 +12,13 @@
     display: grid;
     margin-top: 30px;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 210px;
     gap: 20px;
     list-style: none;
   }
 
   li {
     background-color: white;
-    padding: 15px;
+    padding: 20px 15px;
     text-align: center;
     display: flex;
     flex-direction: column;
