--- a/styles/module.css
+++ b/styles/module.css
@@ -185,13 +185,12 @@ body {
   display: grid;
   margin-top: 30px;
   grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 210px;
   gap: 20px;
   list-style: none;
 }
 .habilities li {
   background-color: white;
-  padding: 15px;
+  padding: 20px 15px;
   text-align: center;
   display: flex;
   flex-direction: column;
