--- a/styles/breakpoints/laptop.css
+++ b/styles/breakpoints/laptop.css
@@ -1,6 +1,10 @@
 .projects__container {
   grid-template-columns: 1fr;
-  gap: 30px;
+  gap: 70px;
+}
+
+.projects__item-description {
+  margin-right: -140px;
 }
 
 /*# sourceMappingURL=laptop.css.map */
