--- a/styles/breakpoints/laptop.scss
+++ b/styles/breakpoints/laptop.scss
@@ -1,4 +1,7 @@
 .projects__container {
   grid-template-columns: 1fr;
-  gap: 30px;
+  gap: 70px;
+}
+.projects__item-description {
+  margin-right: -140px;
 }
