--- a/styles/module.css
+++ b/styles/module.css
@@ -236,6 +236,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 50px;
+  gap: 50px;
 }
 .projects__item {
   display: flex;
