--- a/styles/breakpoints/sm-tablet.css
+++ b/styles/breakpoints/sm-tablet.css
@@ -6,4 +6,41 @@
   line-height: 1.6rem;
 }
 
+.description-initial h3 {
+  font-size: 2rem;
+}
+.description-initial a {
+  padding: 9px 12px;
+  font-size: 1rem;
+}
+.description-initial i {
+  left: 10px;
+}
+
+/*________________________Projects____________________*/
+.projects__container {
+  gap: 25px;
+}
+
+.projects__item-description {
+  position: static;
+  width: 280px;
+  height: 220px;
+}
+
+.projects__item-visuals {
+  display: none;
+}
+
+.description-secondary {
+  font-size: 1rem;
+  padding: 15px 26px;
+}
+.description-secondary h4 {
+  font-size: 1.2rem;
+}
+.description-secondary i {
+  right: 10px;
+}
+
 /*# sourceMappingURL=sm-tablet.css.map */
