--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -86,13 +86,13 @@
 }
 .header__activators {
   background-color: #fc5c57ab;
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   position: fixed;
   bottom: 10px;
   right: 10px;
   color: white;
-  font-size: 3rem;
+  font-size: 2.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -176,11 +176,23 @@
 
 /*_______________Proyects________________*/
 .projects {
-  padding: 15px 15px 0;
+  padding: 70px 15px 0;
+}
+.projects__container {
+  gap: 45px;
+  margin-top: 30px;
 }
 .projects__item-description {
   margin-right: 0;
   position: absolute;
+}
+
+/*_______________Contact________________*/
+.contact {
+  margin-top: 40px;
+}
+.contact h3 {
+  text-align: center;
 }
 
 /*# sourceMappingURL=tablet.css.map */
