--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -94,13 +94,13 @@
 
   &__activators {
     background-color: #fc5c57ab;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     position: fixed;
     bottom: 10px;
     right: 10px;
     color: white;
-    font-size: 3rem;
+    font-size: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -192,9 +192,22 @@
 /*_______________Proyects________________*/
 
 .projects {
-  padding: 15px 15px 0;
+  padding: 70px 15px 0;
+  &__container {
+    gap: 45px;
+    margin-top: 30px;
+  }
   &__item-description {
     margin-right: 0;
     position: absolute;
+  }
+}
+
+/*_______________Contact________________*/
+.contact {
+  margin-top: 40px;
+
+  h3 {
+    text-align: center;
   }
 }
