--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -32,19 +32,21 @@
   line-height: 2.1rem;
 }
 .aboutme__personal a {
-  color: #fc5c57;
+  color: white;
   font-weight: 600;
-  font-size: 1.3rem;
-  border: 2px solid #fc5c57;
-  padding: 13px 25px;
+  background-color: #fc5c57;
+  margin-right: 5px;
+  font-size: 1.5rem;
+  padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
   transition: 0.3s;
 }
 .aboutme__personal a:hover {
-  background-color: #fc5c57;
-  color: white;
+  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
+  box-shadow: 1px 3px 5px 1px #fc5c57;
+  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
 }
 .aboutme__objectives {
   width: 50%;
