--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -28,6 +28,7 @@
   top: -100vh;
   height: 100vh;
   display: grid;
+  z-index: 10;
   // grid-template-rows: 210px 1.5fr 1fr;
   grid-template-rows: 0.4fr 0.8fr 0.5fr;
   padding: 0;
@@ -150,7 +151,7 @@
   }
   &__description {
     width: 100%;
-    padding: 15px 15px 0;
+    padding: 20px 15px 0;
     ul {
       padding: 0;
       li {
@@ -166,7 +167,7 @@
 
   &__objectives {
     width: 100%;
-    padding: 15px 15px 0;
+    padding: 30px 15px 0;
     margin: 0;
 
     ul {
@@ -190,18 +191,6 @@
 }
 
 /*_______________Proyects________________*/
-
-.projects {
-  padding: 70px 15px 0;
-  &__container {
-    gap: 45px;
-    margin-top: 30px;
-  }
-  &__item-description {
-    margin-right: 0;
-    position: absolute;
-  }
-}
 
 /*_______________Contact________________*/
 .contact {
