--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -70,9 +70,7 @@
   }
 
   button:hover {
-    -webkit-box-shadow: 0px 1px 5px 1px #fc5c57;
-    box-shadow: 0px 1px 5px 1px #fc5c57;
-    -moz-box-shadow: 0px 1px 3px 1px #fc5c57;
+    @include redButtonHover();
   }
 
   ul {
