--- a/styles/module.css
+++ b/styles/module.css
@@ -143,19 +143,21 @@ body {
   line-height: 2.1rem;
 }
 .aboutme__personal a {
-  color: #fc5c57;
+  color: white;
   font-weight: 600;
-  font-size: 1.3rem;
-  border: 2px solid #fc5c57;
-  padding: 13px 25px;
+  background-color: #fc5c57;
+  margin-right: 5px;
+  font-size: 1.5rem;
+  padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
   transition: 0.3s;
 }
 .aboutme__personal a:hover {
-  background-color: #fc5c57;
-  color: white;
+  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
+  box-shadow: 1px 3px 5px 1px #fc5c57;
+  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
 }
 .aboutme__objectives {
   width: 50%;
@@ -233,133 +235,69 @@ body {
   color: #34343480;
 }
 .projects__container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 50px;
-  gap: 50px;
+  padding: 40px 50px;
 }
 .projects__item {
   display: flex;
   align-items: center;
-  position: relative;
-  justify-content: center;
-  /* padding-right: 25px; */
-  /* margin: 40px 0 80px; */
+  justify-content: space-between;
+  background-color: white;
+  padding: 30px;
+  height: 360px;
+  max-width: 1500px;
+  margin: 0 auto;
+  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
+  box-shadow: 1px 3px 5px 1px #0000000d;
+  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
 }
 .projects__item-description {
-  width: 500px;
-  height: 270px;
-  margin-right: -250px;
+  padding: 20px;
+  width: 50%;
 }
-.projects__item-description-container {
-  background-color: white;
-  overflow: hidden;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-.projects__item-description-container i {
-  position: absolute;
-  font-size: 2.2rem;
-  cursor: pointer;
-}
-.projects__item-visuals {
-  position: relative;
-  z-index: -1;
-  width: 545px;
-  height: 320px;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-.projects__item-visuals div {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.384);
-}
-.projects__item-visuals img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.description-initial {
-  width: 100%;
-  height: 100%;
-  right: 0;
-  flex-shrink: 0;
-  position: absolute;
-  transition: 0.5s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.description-initial h3 {
+.projects__item-description h3 {
   font-size: 3rem;
-  font-weight: 300;
-  margin-bottom: 7px;
+  text-align: center;
 }
-.description-initial a {
-  color: #fc5c57;
+.projects__item-description h4 {
+  font-size: 1.5rem;
+  color: #34343480;
+  text-align: center;
+  margin: 3px 0 15px;
+}
+.projects__item-description p {
+  font-size: 1.4em;
+  line-height: 2.1rem;
+}
+.projects__item-description-buttons {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+}
+.projects__item-description-buttons a {
+  color: white;
   font-weight: 600;
-  font-size: 1.3rem;
-  border: 2px solid #fc5c57;
-  padding: 13px 25px;
+  background-color: #fc5c57;
+  margin-right: 5px;
+  font-size: 1.5rem;
+  padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
   transition: 0.3s;
 }
-.description-initial a:hover {
-  background-color: #fc5c57;
-  color: white;
+.projects__item-description-buttons a:hover {
+  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
+  box-shadow: 1px 3px 5px 1px #fc5c57;
+  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
 }
-.description-initial i {
-  left: 25px;
+.projects__item-image {
+  height: 260px;
+  width: 420px;
 }
-
-.description-secondary {
+.projects__item-image img {
   width: 100%;
   height: 100%;
-  left: 500px;
-  flex-shrink: 0;
-  position: absolute;
-  transition: 0.5s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 1.3rem;
-  padding: 30px 50px;
-}
-.description-secondary p {
-  padding-bottom: 10px;
-  text-align: justify;
-}
-.description-secondary h4 {
-  font-size: 1.5rem;
-}
-.description-secondary ul {
-  padding-left: 20px;
-}
-.description-secondary li {
-  margin: 2px 0;
-}
-.description-secondary i {
-  right: 25px;
-}
-
-.move-initial {
-  right: 500px;
-}
-
-.move-secondary {
-  left: 0;
+  object-fit: cover;
 }
 
 .contact {
@@ -427,9 +365,9 @@ body {
   cursor: pointer;
 }
 .contact button:hover {
-  -webkit-box-shadow: 0px 1px 5px 1px #fc5c57;
-  box-shadow: 0px 1px 5px 1px #fc5c57;
-  -moz-box-shadow: 0px 1px 3px 1px #fc5c57;
+  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
+  box-shadow: 1px 3px 5px 1px #fc5c57;
+  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
 }
 .contact ul {
   list-style: none;
