--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -25,11 +25,12 @@ $gray: #34343480;
 }
 
 @mixin redButton() {
-  color: $main;
+  color: white;
   font-weight: 600;
-  font-size: 1.3rem;
-  border: 2px solid $main;
-  padding: 13px 25px;
+  background-color: $main;
+  margin-right: 5px;
+  font-size: 1.5rem;
+  padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
@@ -37,8 +38,7 @@ $gray: #34343480;
 }
 
 @mixin redButtonHover() {
-  background-color: $main;
-  color: white;
+  @include darkShadow($main);
 }
 
 @mixin titles() {
