--- a/styles/contact.css
+++ b/styles/contact.css
@@ -39,7 +39,7 @@
 }
 .contact label textarea {
   margin-top: 10px;
-  height: 70px;
+  height: 100px;
   resize: none;
   font-family: "Raleway", sans-serif;
 }
@@ -48,24 +48,50 @@
   border-bottom: 1px solid #fc5c57;
 }
 .contact button {
-  color: white;
-  background-color: #fc5c57;
-  font-family: "Raleway", sans-serif;
   font-weight: 600;
-  font-size: 1.7rem;
-  border: 2px solid #fc5c57;
+  margin-top: 5px;
+  border: none;
   padding: 13px 25px;
+  display: inline-block;
+  width: 280px;
+  cursor: pointer;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.7rem;
+  position: relative;
+  overflow: hidden;
+  color: white;
+  font-weight: 600;
+  background-color: #fc5c57;
+  margin-right: 5px;
+  font-size: 1.5rem;
+  padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
-  transition: 0.2s;
-  width: 280px;
-  cursor: pointer;
+  transition: 0.3s;
+  /*     color: white;
+   background-color: $main;
+   text-decoration: none;
+   transition: 0.2s;
+  */
 }
-.contact button:hover {
-  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
-  box-shadow: 1px 3px 5px 1px #fc5c57;
-  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
+.contact button span {
+  position: inherit;
+  z-index: 2;
+}
+.contact button::after {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  content: "";
+  background-color: #ff8178;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: 0.4s ease all;
+}
+.contact button:hover::after {
+  top: 0;
 }
 .contact ul {
   list-style: none;
