--- a/styles/module.css
+++ b/styles/module.css
@@ -143,6 +143,8 @@ body {
   line-height: 2.1rem;
 }
 .aboutme__personal a {
+  position: relative;
+  overflow: hidden;
   color: white;
   font-weight: 600;
   background-color: #fc5c57;
@@ -154,10 +156,23 @@ body {
   text-decoration: none;
   transition: 0.3s;
 }
-.aboutme__personal a:hover {
-  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
-  box-shadow: 1px 3px 5px 1px #fc5c57;
-  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
+.aboutme__personal a span {
+  position: inherit;
+  z-index: 2;
+}
+.aboutme__personal a::after {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  content: "";
+  background-color: #ff8178;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: 0.4s ease all;
+}
+.aboutme__personal a:hover::after {
+  top: 0;
 }
 .aboutme__objectives {
   width: 50%;
@@ -245,7 +260,7 @@ body {
   padding: 30px;
   height: 360px;
   max-width: 1500px;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
   box-shadow: 1px 3px 5px 1px #0000000d;
   -moz-box-shadow: 1px 3px 5px 1px #0000000d;
@@ -272,8 +287,13 @@ body {
   width: 100%;
   text-align: center;
   margin-top: 10px;
+  /* a:hover {
+    @include redButtonHover();
+  } */
 }
 .projects__item-description-buttons a {
+  position: relative;
+  overflow: hidden;
   color: white;
   font-weight: 600;
   background-color: #fc5c57;
@@ -285,10 +305,23 @@ body {
   text-decoration: none;
   transition: 0.3s;
 }
-.projects__item-description-buttons a:hover {
-  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
-  box-shadow: 1px 3px 5px 1px #fc5c57;
-  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
+.projects__item-description-buttons a span {
+  position: inherit;
+  z-index: 2;
+}
+.projects__item-description-buttons a::after {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  content: "";
+  background-color: #ff8178;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: 0.4s ease all;
+}
+.projects__item-description a:hover::after {
+  top: 0;
 }
 .projects__item-image {
   height: 260px;
@@ -341,7 +374,7 @@ body {
 }
 .contact label textarea {
   margin-top: 10px;
-  height: 70px;
+  height: 100px;
   resize: none;
   font-family: "Raleway", sans-serif;
 }
@@ -350,24 +383,50 @@ body {
   border-bottom: 1px solid #fc5c57;
 }
 .contact button {
-  color: white;
-  background-color: #fc5c57;
-  font-family: "Raleway", sans-serif;
   font-weight: 600;
-  font-size: 1.7rem;
-  border: 2px solid #fc5c57;
+  margin-top: 5px;
+  border: none;
   padding: 13px 25px;
+  display: inline-block;
+  width: 280px;
+  cursor: pointer;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.7rem;
+  position: relative;
+  overflow: hidden;
+  color: white;
+  font-weight: 600;
+  background-color: #fc5c57;
+  margin-right: 5px;
+  font-size: 1.5rem;
+  padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
-  transition: 0.2s;
-  width: 280px;
-  cursor: pointer;
+  transition: 0.3s;
+  /*     color: white;
+   background-color: $main;
+   text-decoration: none;
+   transition: 0.2s;
+  */
 }
-.contact button:hover {
-  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
-  box-shadow: 1px 3px 5px 1px #fc5c57;
-  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
+.contact button span {
+  position: inherit;
+  z-index: 2;
+}
+.contact button::after {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  content: "";
+  background-color: #ff8178;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: 0.4s ease all;
+}
+.contact button:hover::after {
+  top: 0;
 }
 .contact ul {
   list-style: none;
