--- a/styles/projects.css
+++ b/styles/projects.css
@@ -18,7 +18,7 @@
   padding: 30px;
   height: 360px;
   max-width: 1500px;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
   box-shadow: 1px 3px 5px 1px #0000000d;
   -moz-box-shadow: 1px 3px 5px 1px #0000000d;
@@ -45,8 +45,13 @@
   width: 100%;
   text-align: center;
   margin-top: 10px;
+  /* a:hover {
+    @include redButtonHover();
+  } */
 }
 .projects__item-description-buttons a {
+  position: relative;
+  overflow: hidden;
   color: white;
   font-weight: 600;
   background-color: #fc5c57;
@@ -58,10 +63,23 @@
   text-decoration: none;
   transition: 0.3s;
 }
-.projects__item-description-buttons a:hover {
-  -webkit-box-shadow: 1px 3px 5px 1px #fc5c57;
-  box-shadow: 1px 3px 5px 1px #fc5c57;
-  -moz-box-shadow: 1px 3px 5px 1px #fc5c57;
+.projects__item-description-buttons a span {
+  position: inherit;
+  z-index: 2;
+}
+.projects__item-description-buttons a::after {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  content: "";
+  background-color: #ff8178;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: 0.4s ease all;
+}
+.projects__item-description a:hover::after {
+  top: 0;
 }
 .projects__item-image {
   height: 260px;
