--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -18,7 +18,7 @@
     padding: 30px;
     height: 360px;
     max-width: 1500px;
-    margin: 0 auto;
+    margin: 0 auto 50px;
     @include lightShadow();
     &-description {
       padding: 20px;
@@ -47,11 +47,21 @@
         margin-top: 10px;
         a {
           @include redButton();
+          span {
+            @include redButtonSpan;
+          }
+        }
+        a::after {
+          @include redButtonAfter();
         }
 
-        a:hover {
+        /* a:hover {
           @include redButtonHover();
-        }
+        } */
+      }
+
+      a:hover::after {
+        @include redButtonHover();
       }
     }
 
