--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -25,6 +25,8 @@ $gray: #34343480;
 }
 
 @mixin redButton() {
+  position: relative;
+  overflow: hidden;
   color: white;
   font-weight: 600;
   background-color: $main;
@@ -37,8 +39,25 @@ $gray: #34343480;
   transition: 0.3s;
 }
 
+@mixin redButtonSpan() {
+  position: inherit;
+  z-index: 2;
+}
+
+@mixin redButtonAfter() {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  content: '';
+  background-color: #ff8178;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: 0.4s ease all;
+}
+
 @mixin redButtonHover() {
-  @include darkShadow($main);
+  top: 0;
 }
 
 @mixin titles() {
